<resources>
    <string name="app_name">ProyectoABCKotlin</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar_candidato">Registrar Candidato</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="login_exitoso">Login exitoso</string>
    <string name="error_ingresando">Error ingresando, intente nuevamente</string>
    <string name="datos_incorrectos">usuario o contraseña incorrectos</string>
    <string name="acces_ingrese_usuario">Ingrese el usuario</string>
    <string name="acces_ingrese_contrasena">Ingrese Contraseña</string>
    <string name="acces_boton_ingresar">Botón para ingresar</string>
    <string name="acces_boton_registrar">Botón para registrar candidato</string>
    <string name="identificacion">Identificación</string>
    <string name="acces_ingrese_id">Ingrese el número de identificación</string>
    <string name="direccion">Direcciónde residencia</string>
    <string name="telefono">Número de teléfono</string>
    <string name="profesion">Profesión</string>
    <string name="experiencia">Años de experiencia</string>
    <string name="acces_ingrese_direccion">Ingrese la dirección de residencia</string>
    <string name="acces_ingrese_telefono">Ingrese un número de telefono</string>
    <string name="acces_ingrese_profesion">Ingrese su profesión</string>
    <string name="acces_ingrese_experiencia">Ingrese los años de experiencia</string>
    <string name="siguiente_personal_candidato">Siguiente</string>
    <string name="acces_boton_info_per_candidato">Botón para continuar registro información candidato</string>
    <string name="continuar">Continuar</string>
    <string name="regresar">Regresar</string>
    <string name="acces_boton_continuar">Botón para continuar</string>
    <string name="acces_boton_regresar">Botón para regresar</string>
    <string name="registro_candidato">Registro Candidato</string>
    <string name="acces_text_registro">Título de registro de candidato</string>
    <string name="acces_repetir_contrasena">Repita nuevamente la contraseña</string>
    <string name="repetir_contrasena">Repetir Contraseña</string>
    <string name="valida_usuario">Debe ingresar un usuario</string>
    <string name="valida_contrasena">Debe ingresar una contraseña</string>
    <string name="titulo_registro_info_candidato">Registro de Información del Candidato</string>
    <string name="acces_text_registro_info_camdidato">Título de registro de información del candidato</string>
    <string name="subtitulo_registro_info_candidato">Información Personal</string>
    <string name="acces_sub_text_registro_info_candidato">Subtitulo registrar información candidato</string>
    <string name="acces_ingrese_pais">Ingrese el Pais de Residencia</string>
    <string name="acces_ingrese_departamento">Ingrese el departamento de residencia</string>
    <string name="acces_ingrese_ciudad">Ingrese la ciudad de residencia</string>
    <string-array name="tipos_identificacion">
        <item>Tipo de Identificación</item>
        <item>Cédula de Identidad</item>
        <item>Pasaporte</item>
        <item>Registro Civil</item>
    </string-array>
    <string-array name="pais">
        <item>País</item>
        <item>Colombia</item>
        <item>México</item>
        <item>Estados Unidos</item>
    </string-array>
    <string-array name="departamento">
        <item>Departamento</item>
        <item>Antioquia</item>
        <item>Cundinamarca</item>
        <item>Valle del cauca</item>
    </string-array>
    <string-array name="ciudad">
        <item>Ciudad</item>
        <item>Medellin</item>
        <item>Bogota</item>
        <item>Cali</item>
    </string-array>
    <string name="valida_igual_contrasena">Las contraseñas no coinciden</string>
    <string name="valida_identificacion">Debe ingresar un número de identificación</string>
    <string name="valida_direccion">Debe ingresar una dirección de residencia</string>
    <string name="validacion_telefono">Debe ingresar un número de teléfono</string>
    <string name="valida_profesion">Debe ingresar una profesion</string>
    <string name="valida_experiencia">Debe ingresar los años de experiencia</string>
    <string name="subtitulo_registro_edu_candidato">Educación</string>
    <string name="acces_sub_text_registro_edu_candidato">Subtitulo Registro educación candidato</string>
    <string name="acces_ingrese_ultimo_estudio">Ingrese Último Estudio</string>
    <string name="ultimoEstudio">Ultimo Estudio</string>
    <string name="acces_sub_text_registro_lab_candidato">Subtitulo registrar información laboral</string>
    <string name="subtitulo_registro_lab_candidato">Información Laboral</string>
    <string name="acces_ingrese_institucion">Ingrese institución de último estudio</string>
    <string name="institucion">Institución</string>
    <string name="acces_ingrese_anio_grado">Ingrese año del grado</string>
    <string name="anioGrado">Año de Grado</string>
    <string name="acces_ingrese_cargo">Ingrese el cargo de su ultimo empleo</string>
    <string name="cargo">Cargo de su último empleo</string>
    <string name="acces_ingrese_ultima_empresa">Ingrese el nombre de la última empresa</string>
    <string name="ultimaEmpresa">Ultima Empresa</string>
    <string name="acces_ingrese_anio_ingreso">Ingrese el año de ingreso a la empresa</string>
    <string name="anioIngreso">Año de Ingreso</string>
    <string name="anioRetiro">Año Retiro</string>
    <string name="acces_ingrese_anio_retiro">Ingrese año de retiro</string>
    <string name="guardar_info_candidato">Guardar</string>
    <string name="acces_boton_guardar_candidato">"Botón para guardar "</string>
    <string name="acces_sub_text_registro_palabra_candidato">Subtitulo conociminetos y aptitudes del candidato</string>
    <string name="subtitulo_registro_palabra_candidato">Conocimientos y Aptitudes</string>
    <string name="valida_claves">Debe Ingresar conocimientos y aptitudes</string>
    <string name="acces_ingrese_palabra_clave">Ingrese Conocimientos y aptiudes</string>
    <string name="acces_ingrese_nombre">Ingrese el nombre</string>
    <string name="nombre">Nombre</string>
    <string name="registro_candidato_exitoso">Registro Candidato Exitoso</string>
    <string name="datos_incorrectos_usuario">No se puede crear el usuario. El usuario ya existe</string>
    <string name="registrarResultadosPruebas">Ver Resultados Pruebas</string>
    <string name="acces_boton_resultado_pruebas">boton para ir al resultado de pruebas</string>
    <string name="evaluacion_desempeno_empleado">Evaluacion Desempeño Empleado</string>
    <string name="acces_boton_desempeno_empleado">Boton para ir al registro evaluacion desempeño empleado</string>
    <string name="titulo_evaluacion_desempeno">Evaluación Desempeño Empleado</string>
    <string name="acces_text_evaluacion_desempeno">Título de evaluación desempeño empleado</string>
    <string name="calificacion">Calificación</string>
    <string name="acces_ingrese_calificacion">Ingrese una calificación</string>
    <string name="aspectos_resaltar">Aspectos a Resaltar</string>
    <string name="acces_ingrese_aspectos_resaltar">Ingrese aspectos a resaltar</string>
    <string name="aspectos_mejorar">Aspectos a Mejorar</string>
    <string name="acces_aspectos_mejorar">Ingrese aspectos a mejorar</string>
    <string name="valida_calificacion">Debe ingresar una calificación</string>
    <string name="valida_aspectos_resaltar">Debe ingresar aspectos a resaltar</string>
    <string name="valida_aspectos_mejorar">Debe ingresar aspectos a mejorar</string>
    <string name="desempeno_empleado_exitoso">Registro de datos exitoso</string>
    <string name="datos_incorrectos_desempeno">Error registrando datos, intente de nuevo</string>
    <string name="mensaje_empleado_contrato">No se encuentran empleados contratados para esta empresa</string>
    <string name="ver_resultado_entrevistas">Ver Resultado Entrevistas</string>
    <string name="acces_boton_resultado_entrevistas">Botón para ver el resultado de las entrevistas</string>
    <string name="ver_entrevistas_programadas">Ver Entrevistas Programadas</string>
    <string name="acces_boton_entrevistas_programadas">Botón para ver las entrevistas programadas</string>
    <string name="titulo_resultado_pruebas">Resultado Pruebas</string>
    <string name="acces_text_resultados_pruebas">Título de resultado de pruebas</string>
    <string name="mensaje_pruebas_resultado">El candidato no tiene pruebas registradas</string>
    <string name="acces_text_resultados_entrevistas">Titulo de resultado de entrevistas</string>
    <string name="titulo_resultado_entrevistas">Resultado de Entrevistas</string>
    <string name="mensaje_entrevistas_resultado">El candidato no tiene entrevistas  registradas</string>
    <string name="acces_text_entrevistas_programadas">Titulo de entrevistas programadas</string>
    <string name="titulo_entrevistas_programadas">Entrevistas Programadas</string>
</resources>