<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registroCandidato.RegistroCandidatoActivity"
        android:background="#F0ECEC">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imagen2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registro_candidato"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/acces_text_registro"
        android:gravity="center"
        android:text="@string/registro_candidato"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen2" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/usuario_registro_edit"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:hint="@string/usuario"
        android:contentDescription="@string/acces_ingrese_usuario"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:background="@drawable/ic_edittext_background_v2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registro_candidato" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/contrasena_registro_edit"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:inputType="textPassword"
        android:hint="@string/contrasena"
        android:contentDescription="@string/acces_ingrese_contrasena"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:background="@drawable/ic_edittext_background_v2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario_registro_edit" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/repetir_contrasena_registro_edit"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:inputType="textPassword"
        android:hint="@string/repetir_contrasena"
        android:contentDescription="@string/acces_repetir_contrasena"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:background="@drawable/ic_edittext_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasena_registro_edit" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continuar_registro_button"
        android:layout_width="246dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="@string/continuar"
        android:contentDescription="@string/acces_boton_continuar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repetir_contrasena_registro_edit"
        android:background="@drawable/ic_button_rounded"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/regresar_candidato_login_button"
        android:layout_width="246dp"
        android:layout_height="41dp"
        android:fontFamily="sans-serif-black"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="@drawable/ic_button_rounded"
        android:contentDescription="@string/acces_boton_regresar"
        android:text="@string/regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continuar_registro_button"
        app:layout_constraintVertical_bias="0.204" />

</androidx.constraintlayout.widget.ConstraintLayout>