<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity"
    android:background="#F0ECEC">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imagen1"
        android:layout_width="255dp"
        android:layout_height="255dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagen1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/usuario_login_edit"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/ic_edittext_background_v2"
        android:ems="10"
        android:hint="@string/usuario"
        android:contentDescription="@string/acces_ingrese_usuario"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/contrasena_login_edit"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/contrasena"
        android:contentDescription="@string/acces_ingrese_contrasena"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:background="@drawable/ic_edittext_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario_login_edit" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ingresar_login_button"
        android:layout_width="246dp"
        android:layout_height="41dp"
        android:layout_marginTop="56dp"
        android:text="@string/ingresar"
        android:contentDescription="@string/acces_boton_ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasena_login_edit"
        android:background="@drawable/ic_button_rounded"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registrar_candidato_login_button"
        android:layout_width="246dp"
        android:layout_height="42dp"
        android:layout_marginBottom="108dp"
        android:text="@string/registrar_candidato"
        android:contentDescription="@string/acces_boton_registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresar_login_button"
        android:background="@drawable/ic_button_rounded"/>

</androidx.constraintlayout.widget.ConstraintLayout>